# flowgen

./: .gitmodules  LICENSE  bash_train_online.sh  batch_postproc_vae.sh  batch_postprocess.sh  batch_test_dl.sh  batch_test_online_dl.sh  batch_train_autoencoder.sh  batch_train_off.sh  batch_train_online.sh  batch_train_pf.sh  batch_train_unet.sh  evaluate_autoencoder.py  install_adios2.sh  postprocess.py  pyproject.toml  requirements.txt  setup.py  test.py  test_online_dataloader.sh  train.py  train_autoencoder.py  train_offline.py  train_online.py  vae_config.yaml  vae_config_2.yaml  vae_config_3.yaml  vae_config_4.yaml  vae_config_5.yaml  vae_config_6.yaml  vae_config_7.yaml  vae_config_8.yaml
simulations/HIT/: HIT_decay.json  HIT_decay_ma0.2.json  HIT_decay_ma0.4.json  HIT_decay_ma0.6.json  HIT_decay_ma1.2.json  HIT_forced_ma0.4.json  batch_run_forced_hit.sh  batch_test.sh  forced_numerical_setup.json  numerical_setup.json  numerical_setup_forced.json  run_forced_hit.py  run_hit_decay.py  run_multi_hit.py
simulations/atmo/: RM10S.py  batch_test.sh
solvers/JAXFLUIDS/examples/examples_3D/04_HIT_decay/: HIT_decay.json  numerical_setup.json
solvers/JAXFLUIDS/src/jaxfluids/: simulation_manager.py
solvers/JAXFLUIDS/src/jaxfluids/io_utils/: output_writer.py
solvers/JAXFLUIDS/src/jaxfluids/solvers/riemann_solvers/: HLLCLM.py
solvers/JAXFLUIDS/src/jaxfluids/turb/: turb_stats_manager.py
solvers/lbmpy-atmo-dl/: .gitignore  CHANGELOG.md  LICENSE  README.md  setup.cfg
solvers/lbmpy-atmo-dl/examples/: urban_buildings.py  urban_surface.py
solvers/lbmpy-atmo-dl/src/atmo/: __init__.py  atmo_solution.py  atmospheric_periodic.py  cli.py  cupy_tools.py  lbm_scaling.py  run_dir_tools.py  run_params.py  runners.py  xmf.py
solvers/lbmpy-atmo-dl/tests/: test_lbm_scaling.py  test_runparams.py
src/: model.py
src/datamodules/: hit_offline_dm.py  hit_server.py  server_baseclass.py
src/flowgen/: __init__.py  model.py
src/flowgen/datamodules/: adios2.xml  atmo_offline_dm.py  hit_offline_dm.py  hit_server.py  server_baseclass.py
src/flowgen/models/: GL_TFNO_t.py  LRU.py  RevIN.py  TFNO_t.py  __init__.py
src/flowgen/models/UNETs/: Attn_UNET.py  DecoderBlock.py  block.py  bottleneck.py  encoder.py  unet_256.py  unet_copy.py  unet_deep_1.py  unet_deep_2.py  unet_deep_3.py  unet_deep_4.py
src/flowgen/models/VAE/: VAE.py  __init__.py  embedding.py  perceiver.py  test.py
src/flowgen/utils/: adaptivePcfLoss.py  loss.py  postprocess.py  scaler.py
src/models/: GL_TFNO_t.py  TFNO_t.py  timeEmbedding.py
src/utils/: loss.py  postprocess.py
