[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "FLOWGEN"
authors = [
    {name = "Fernando Gonzalez", email = "gonzalez@cerfacs.fr"},
]
description = "Repository for experiments of the flowen project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[tool.setuptools_scm]
write_to = "src/flowgen/_version.py"

[tool.setuptools.packages.find]
where = ["src", "solvers"]  # list of folders that contain the packages

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["pytest"]