[metadata]
name = lbmpy-atmo
version = attr: atmo.__version__
author = CoopTeam-CERFACS
author_email = coop@cerfacs.fr
description = atmospheric flows with lbmpy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/cerfacs/lbmpy-atmo
project_urls =
    Homepage = https://gitlab.com/cerfacs/lbmpy-atmo
    Documentation = https://gitlab.com/cerfacs/lbmpy-atmo
    Bug Tracker = https://gitlab.com/cerfacs/lbmpy-atmo/-/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT
keywords =
    CFD
    Scientific Computing

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7
install_requires =
    Cython
    click
    #click_rich
    cupy-cuda11x
    dill
    h5py
    lbmpy  # We need the gpu version, but here specify our own cuda version for cupy
    loguru
    pyyaml
    rich
    tqdm
    unique-names-generator

[options.entry_points]
console_scripts =
    atmo = atmo.cli:cli

[options.packages.find]
where = src

